...
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:maxLines="3"
                android:text="@{movie.title}"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintBottom_toTopOf="@+id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@tools:sample/lorem/random" />

...
                android:drawablePadding="@dimen/keyline_2"
                android:gravity="center_vertical"
                android:text="@{movie.readableDate}"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="@color/material_on_surface_emphasis_medium"
                app:drawableLeftCompat="@drawable/ic_calendar"
                app:layout_constraintBottom_toTopOf="@+id/tv_rate"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="@tools:sample/date/ddmmyy" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rate"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                tools:text="8.5" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="@{()->callback.onItemShared(movie.title)}"
                app:layout_constraintBottom_toBottomOf="@id/iv_poster"
...
