<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movie_label">Movies</string>
    <string name="movie_detail_label">Detail Movie</string>
    <string name="tv_shows_label">Tv Shows</string>
    <string name="tv_shows_detail_label">Detail Tv Show</string>
    <string name="favorite_label">Favorite</string>

    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>

    <string name="share_title">Share with:</string>
    <string name="share_text">See %1$s On Movie Catalogue</string>

    <string name="action_share">Share</string>

    <string name="action_retry">Retry</string>

    <string name="failed_get_data">Failed to get data.\n(%1$s)</string>
...
