...
        android:paddingBottom="@dimen/keyline_2">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chip_popular"
            app:chipSpacing="@dimen/keyline_4"
            app:chipSpacingHorizontal="@dimen/keyline_4"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
                style="@style/Widget.MovieCatalogue.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_now_playing"
                style="@style/Widget.MovieCatalogue.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing_label" />

            <com.google.android.material.chip.Chip
...
